--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <!--//item-->
 
           <div class="item">
-            <h3 class="level-title">Python: MongoDB</h3>
+            <h3 class="level-title">Python; MongoDB</h3>
             <div class="progress level-bar">
               <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
                 aria-valuemin="0" aria-valuemax="100"></div>
