--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
           <div class="time">2016 - 2018</div>
         </div>
         <!--//item-->
+        <div class="item">
+          <h4 class="degree">Matric in Science</h4>
+          <h5 class="meta">Workers Welfare H/S School</h5>
+          <div class="time">2014 - 2016</div>
+        </div>
       </div>
       <!--//education-container-->
 
