--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 Records</strong></a></span>
           -
           <span class="project-tagline">Logistic Application with real-time saving records of documents, build by using
-            Java, Express.js, Node.js and MongoDB (MERN Stack).</span>
+            Java (MERN Stack).</span>
         </div>
         <div class="item">
           <span class="project-title"><a href="https://github.com/DadhSahb/connectNbuy"
