--- a/index.html
+++ b/index.html
@@ -29,15 +29,12 @@
       <div class="contact-container container-block">
         <ul class="list-unstyled contact-list">
           <li class="email">
-            <i class="fas fa-envelope"></i><a href="mailto: thedev.hamza@gmail.com">mohsingoraya313@gmail.com</a>
+            <i class="fas fa-envelope"></i><a href="mailto: mohsingoraya313@gmail.com">mohsingoraya313@gmail.com</a>
           </li>
           <li class="phone">
             <i class="fas fa-phone"></i><a href="tel:+923055269524">+92341 3834000</a>
           </li>
-          <!-- <li class="linkedin">
-            <i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/hamza-hamid-097296194/"
-              target="_blank">hamza-hamid-097296194/</a>
-          </li> -->
+          
           <li class="github">
             <i class="fab fa-github"></i><a href="https://github.com/MMG021" target="_blank">github.com/MMG021</a>
           </li>
